--- a/timelapse-daemon/timelapse.conf
+++ b/timelapse-daemon/timelapse.conf
@@ -1,3 +1,6 @@
+# Configuration file for timelapse photography scripts.
+# This file should be placed in /etc/default/timelapse.conf
+
 # Define the save directory.
 # Timelapse image files will be saved here.
 SAVE_DIR=/var/timelapse
@@ -6,3 +9,7 @@ SAVE_DIR=/var/timelapse
 # The timelapse utility will wait this long in seconds between photos.
 PERIOD=10
 
+# Pass extra arguments to raspistill
+# '-n' to suppress preview pane and '-o filename' are already given.
+# Any additional raspistill arguments can be added here
+RASPISTILL_ARGS = ""
